--- a/markerAR.html
+++ b/markerAR.html
@@ -3,17 +3,16 @@
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded artoolkit='sourceType: webcam;'>
-		 <a-assets>
-      <a-asset-item id="ducky-obj" src="tc.obj"></a-asset-item>
-    </a-assets>
+	    <a-assets>
+	    </a-assets> 
+ <a-entity position="-0.8 3.5 -2"
+           src="#boxTexture" obj-model="obj: url(http://localhost/AR/model/Incense/Incense.obj); 
+		                                mtl: url(http://localhost/AR/model/Incense/Incense.mtl)" scale="0.01 0.01 0.01">
 	
-	<a-entity>
-    <a-obj-model
-      src="#ducky-obj"
-      scale="0.3 0.3 0.3"
-     >
-    </a-obj-model>
-	</a-entity>
-		<a-marker-camera preset='hiro'></a-marker-camera>
+	 
+	 </a-entity>
+                  
+		<a-marker-camera preset='hiro'></a-marker-camera>   
+		
 	</a-scene>
 </body>
