--- a/markerAR.html
+++ b/markerAR.html
@@ -1,18 +1,20 @@
-
+<html>
+<head>
 <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<script src="http://localhost/AR/AR.js-master/aframe/build/aframe-ar.js"></script>
+</head>
 <body style='margin : 0px; overflow: hidden;'>
-	<a-scene embedded artoolkit='sourceType: webcam;'>
+	<a-scene id="scene" embedded artoolkit='sourceType: webcam;'>
 	    <a-assets>
 	    </a-assets> 
- <a-entity position="-0.8 3.5 -2"
+     <a-entity position="-0.8 3.5 -2"
            src="#boxTexture" obj-model="obj: url(http://localhost/AR/model/Incense/Incense.obj); 
 		                                mtl: url(http://localhost/AR/model/Incense/Incense.mtl)" scale="0.01 0.01 0.01">
 	
-	 
 	 </a-entity>
                   
-		<a-marker-camera preset='hiro'></a-marker-camera>   
+	 <a-marker-camera preset='enqos'></a-marker-camera>   
 		
 	</a-scene>
 </body>
+</html>
