--- a/SizeInReality/index.html
+++ b/SizeInReality/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
          
+       
         <script src="dist/sir.bundle.js"></script>
-        <div id="close" style="position:absolute;color:white;top:0;right:0;padding:50px;cursor:pointer;"><i class="fa fa-close" style="font-size:24px;opacity:0.7;"></i></div>
+        <div id="close" style="position:absolute;color:white;top:0;right:0;padding:50px;"><i class="fa fa-close" style="font-size:24px;opacity:0.7;cursor:pointer;"></i></div>
+        <div id="btn" style="padding: 50px;position: absolute;bottom: 0;"> <button domain="Test" id="markerbtn" style="padding: 8px;opacity: 0.8;cursor:pointer;">Marker-based AR</button></div>   
     </body>
 </html>
