--- a/SizeInReality/index.html
+++ b/SizeInReality/index.html
@@ -4,15 +4,17 @@
 <head>
     <title>Size in Reality</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
+</head>
 
 <body style="height:100%">
-        <script src="dist/sir.bundle.js"></script>
-        
-    <div id='sirContentPane' style="width: 100%; height: 100%;">
+    <script src="dist/sir.min.js"></script>
+
+    <div id='sirContentWrapper' style="width: 100%; height: 100%;">
+        <div id='sirContentPane' style="width: 100%; height: 100%;position:relative;">
+        </div>
     </div>
 
-    <div id="arclose" style="position:absolute;color:white;top:0;right:0;padding:50px;" onclick='closebtn()'>
+    <div id="arclose" style="position:absolute;color:white;top:0;right:0;padding:50px;" onclick='closeArView()'>
         <i class="fa fa-close" style="font-size:24px;opacity:0.7;cursor:pointer;"></i>
     </div>
     <div id="btn" style="padding: 50px;position: absolute;bottom: 0;">
@@ -25,22 +27,19 @@
     </div>
 </body>
 
-
-
 <script>
-    
     function StartMarkerlessAr() {
         console.log('Invoking the SIR object.');
+        if (sir.isARCompatible()) {
 
-       // var sirObj = new Sir();
-    //window.sir = sirobj;
-        if (sir._isARCompatible) {
+            var modelName = 'Rayman3';
+            var modelPath = "model";
 
-            var modelName = 'raymanmodel';
-            var mtlPath = "model/Rayman3/Rayman3.mtl";
-            var objPath = "model/Rayman3/Rayman3.obj";
-
-            sir.markerlessRender('sirContentPane', modelName, objPath, mtlPath);
+            sir.Render({
+                containerId: 'sirContentPane',
+                objectUrl: modelPath,
+                modelName: modelName
+            });
         }
         else {
             alert('AR is not compatible in this browser.');
@@ -49,26 +48,27 @@
 
     function StartMarkerAr() {
         console.log('Invoking the SIR object.');
+        if (sir.isARCompatible()) {
 
+            var modelName = 'Rayman3';
+            var modelPath = "model";
+            var marker = 'hiro';
 
-        if (sir._isARCompatible) {
-
-            var modelName = 'raymanmodel';
-            var mtlPath = "model/Rayman3/Rayman3.mtl";
-            var objPath = "model/Rayman3/Rayman3.obj";
-            var marker ='hiro';
-
-            sir.markerRender('sirContentPane', modelName, objPath, mtlPath, marker);
+            sir.Render({
+                containerId: 'sirContentPane',
+                objectUrl: modelPath,
+                marker: 'hiro',
+                modelName: modelName
+            });
         }
         else {
             alert('AR is not compatible in this browser.');
         }
     }
 
-    function closebtn(){
-        sir.arclose();
+    function closeArView() {
+        sir.closeArView('sirContentPane');
     }
-
 
 </script>
 
